# codex-supervisor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-16-codex-supervisor.md
skills/operating-codex-supervisor/: SKILL.md
skills/publishing-codex-supervisor-project/: SKILL.md
src/codex_supervisor/: __init__.py  __main__.py  cli.py  config.py  daemon.py  ipc.py  log_parser.py  models.py  paths.py  runner.py  scheduler.py  service.py  session_monitor.py  state.py  tui_app.py  tui_state.py  tui_widgets.py
tests/: fake_codex.py  test_cli.py  test_docs.py  test_e2e.py  test_ipc.py  test_runner.py  test_scheduler.py  test_session_monitor.py  test_state.py  test_tui_cli.py  test_tui_state.py
tests/fixtures/: session_error_429.jsonl  session_error_disconnect.jsonl
