[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-supervisor"
version = "0.1.0"
description = "Queueing and recovery supervisor for Codex CLI on Windows"
requires-python = ">=3.11"
dependencies = ["textual>=0.86,<1"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
codex-supervisor = "codex_supervisor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
